Bug 172954 - Wrong font size in internet tab
Summary: Wrong font size in internet tab
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0-beta
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords: needs_verification
Depends on:
Blocks:
 
Reported: 2008-10-16 15:03 UTC by Vesa Muhonen
Modified: 2008-10-17 15:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of amarok UI (221.52 KB, image/png)
2008-10-16 15:04 UTC, Vesa Muhonen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Vesa Muhonen 2008-10-16 15:03:19 UTC
Version:           1.92 / beta2 (using KDE 4.1.2)
OS:                Linux
Installed from:    SuSE RPMs

Overall the amarok interface looks very nice and tidy. However, the Internet tab has fonts that are way too large for the boxes reserved for them and it would be nice to change this somewhere.

(I'll attach a screenshot of the problem)
Comment 1 Vesa Muhonen 2008-10-16 15:04:31 UTC
Created attachment 27940 [details]
Screenshot of amarok UI
Comment 2 Mark Kretschmann 2008-10-16 15:43:12 UTC
That's obviously not normal. The font has the correct size here.
Comment 3 Mark Kretschmann 2008-10-16 15:45:12 UTC
Can you check your KDE font settings for anything abnormal?
Comment 4 Vesa Muhonen 2008-10-16 18:48:42 UTC
Nothing seemingly unusual there. I have all fonts set to size 6 except small is 5 and window title is 7. Anti-aliasing is enabled and force fonts DPI is disabled. In qt-settings (if it's relevant even) I have set size 6. Any other settings I should look for?

I do have a slightly higher DPI screen than usual (DPI=147), so I generally (=always practically) need to tweak font settings to make things look ok.
Comment 5 Mark Kretschmann 2008-10-17 13:12:25 UTC
It's true, there is a bug in ServiceListDelegate.cpp, where we specify the font size incorrectly.

We're working on it.
Comment 6 Mark Kretschmann 2008-10-17 15:51:20 UTC
SVN commit 872575 by markey:

Don't hardcode the font in the service browser. This should fix the problems with giant fonts that some users were experiencing.

BUG: 172954


 M  +8 -2      ServiceListDelegate.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=872575