Don't hardcode the font in the service browser. This should fix the problems with giant fonts that some users were experiencing.

BUG: 172954

svn path=/trunk/extragear/multimedia/amarok/; revision=872575